--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,10 +4,11 @@ phases:
   install:
     commands:
       - echo "install phase"
-      - docker --version
+      - docker build -t helloworld .
   pre_build:
     commands:
       - echo "prebuild phase"
+      - docker images
   build:
     commands:
       - echo "build phase"
