aws buildspec file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,16 +3,12 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "install phase"
       - nohup /usr/local/bin/dockerd --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2 &
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
   pre_build:
-      - docker build -t helloworld .
-  pre_build:
     commands:
-      - echo "prebuild phase"
-      - docker images
-      - echo "Hello world "
+      - docker build -t helloworld .
   build:
     commands:
-      - echo "build phase"
+      - docker images
+      - docker run helloworld echo "Hello, World!" 
